[project]
name = "dedust"
description = "DeDust - DeDust SDK for Python."
readme = "README.md"
version = "1.1.0"
authors = [
    {name = "Shibdev"},
    {name = "Dalvpv"}
]
dependencies = [
    "httpx==0.19.0",
    "pytoniq>=0.1.19"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

